error occurred during error reporting (printing register info)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • None
    • b23

        The function os::print_location misses a check if the pointer is readable.
        For example "jdk/bin/java -XX:+CrashGCForDumpingJavaThread -version" generates a hs_err file which doesn't analyze the registers correctly because of "error occurred during error reporting (printing register info)" in section "Register to memory mapping".

              Assignee:
              Martin Doerr
              Reporter:
              Martin Doerr
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved: