8207342: error occurred during error reporting (printing register info)

Os::print_location misses a check if the pointer is readable.

Reviewed-by: goetz, coleenp